<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>com.cardshifter</groupId>
		<artifactId>cardshifter</artifactId>
		<version>0.5-SNAPSHOT</version>
	</parent>
	
	<artifactId>cardshifter-core</artifactId>
	<name>cardshifter-core</name>
	<url>https://github.com/Cardshifter/Cardshifter</url>
	<packaging>jar</packaging>
	
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>zomisnet</id>
			<name>Zomis' Maven Repository</name>
			<url>http://www.zomis.net/maven</url>
		</repository>
	</repositories>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<skip>true</skip>
				</configuration>
				<executions>
					<execution>
						<id>normal-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<skip>false</skip>
							<excludes>
								<exclude>**/JavaModTest.java</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>javamod-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<skip>false</skip>
							<includes>
								<include>**/JavaModTest.java</include>
							</includes>
							<reuseForks>false</reuseForks>
							<argLine>-Djava.security.manager -Djava.security.policy==${basedir}/src/test/resources/com/cardshifter/core/integration/javamodtest.policy</argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.cardshifter</groupId>
			<artifactId>cardshifter-api</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.cardshifter</groupId>
			<artifactId>cardshifter-modapi</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.cardshifter</groupId>
			<artifactId>cardshifter-test</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.luaj</groupId>
			<artifactId>luaj-jse</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.bcel</groupId>
			<artifactId>bcel</artifactId>
			<version>5.2</version>
		</dependency>
		<dependency>
			<groupId>net.zomis</groupId>
			<artifactId>scorers</artifactId>
			<version>0.2-SNAPSHOT</version>
		</dependency>
	</dependencies>
</project>
